--- a/BrainfuckCompiler/BrainfuckCompiler.vcxproj
+++ b/BrainfuckCompiler/BrainfuckCompiler.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Assert.cpp" />
     <ClCompile Include="JIT\Compiler.cpp" />
     <ClCompile Include="JIT\Codegen.cpp" />
     <ClCompile Include="IO.cpp" />
